--- a/style.css
+++ b/style.css
@@ -1,10 +1,47 @@
+body {
+  margin: 0;
+}
+
+#game-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: start;
+  padding: 20px;
+}
+
 #chessboard-container {
+  flex: 1;
   position: relative;
 }
 
 #chessboard {
   position: absolute;
+  cursor: pointer;
   top: 0;
   left: 0;
   z-index: 1;
+}
+
+#sidebar {
+  width: 20%;
+  margin-left: 20px;
+}
+
+#navigation {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+#prev-move,
+#next-move {
+  cursor: pointer;
+}
+
+#pgn-box,
+#fen-box {
+  width: 100%;
+  margin-bottom: 10px;
+  height: 100px;
+  resize: vertical;
 }
