--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ body {
   z-index: 1;
 }
 
+.draggingDiv {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
 #sidebar {
   width: 20%;
   margin-left: 20px;
