--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
 body {
-  margin: 0;
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 #game-container {
   display: flex;
-  justify-content: space-around;
-  align-items: start;
-  padding: 20px;
+  margin: 20px;
+  flex-grow: 1;
 }
 
 #chessboard-container {
-  flex: 1;
+  width: 75vmin;
+  height: 75vmin;
   position: relative;
 }
 
@@ -30,14 +33,40 @@ body {
 }
 
 #sidebar {
-  width: 20%;
+  flex-grow: 1;
+  min-width: 225px;
   margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+#fen-import-container {
+  margin-top: 10px;
+}
+
+#fen-input {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+#submit-fen {
+  margin-bottom: 10px;
 }
 
 #navigation {
   display: flex;
   justify-content: space-between;
+}
+
+#move-history {
+  height: 100%;
+  border: 1px solid #ccc;
   margin-bottom: 10px;
+  overflow-y: auto;
+}
+
+#move-history-title {
+  text-align: center;
 }
 
 #prev-move,
@@ -45,10 +74,26 @@ body {
   cursor: pointer;
 }
 
+#text-areas-container {
+  width: 100%;
+  flex: 1;
+  margin: 0px 20px 0px 20px;
+}
+
 #pgn-box,
 #fen-box {
   width: 100%;
   margin-bottom: 10px;
-  height: 100px;
   resize: vertical;
 }
+
+#pgn-box {
+  height: 100px;
+}
+
+#fen-box {
+  height: 50px;
+}
+
+/*After 1200px width, center everything
+  Under 800px width, put move history under chessboard (columns)*/
