--- a/style.css
+++ b/style.css
@@ -5,15 +5,19 @@ body {
   height: 100vh;
 }
 
+#outer-container {
+  margin: 20px;
+}
+
 #game-container {
   display: flex;
-  margin: 20px;
   flex-grow: 1;
 }
 
 #chessboard-container {
   width: 75vmin;
   height: 75vmin;
+  min-width: 75vmin;
   position: relative;
 }
 
@@ -34,6 +38,7 @@ body {
 
 #sidebar {
   flex-grow: 1;
+  max-width: calc(100% - 75vmin - 20px);
   min-width: 225px;
   margin-left: 20px;
   display: flex;
@@ -59,6 +64,10 @@ body {
 }
 
 #move-history {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  align-content: flex-start;
   height: 100%;
   border: 1px solid #ccc;
   margin-bottom: 10px;
@@ -69,6 +78,17 @@ body {
   text-align: center;
 }
 
+.full-move {
+  display: flex;
+  align-items: center;
+  margin: 4px;
+}
+
+.move-history-entry {
+  cursor: pointer;
+  margin: 3px;
+}
+
 #prev-move,
 #next-move {
   cursor: pointer;
@@ -77,7 +97,7 @@ body {
 #text-areas-container {
   width: 100%;
   flex: 1;
-  margin: 0px 20px 0px 20px;
+  margin: 20px 20px 0px 0px;
 }
 
 #pgn-box,
