Added castling to Move History, pseudo code for disambiguating moves.  Started code for drawing circle/arrows with right click.  After that it's implementing stockfish/player setup and possible continuous analysis

--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ body {
   z-index: 1;
 }
 
+#chessSVG {
+  pointer-events: none;
+}
+
 .draggingDiv {
   user-select: none;
   -moz-user-select: none;
